Adjust footer css

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -173,12 +173,12 @@
       </div>
     </div>
 
-    <div class="container-fluid d-flex my-auto" id="footer-bottom">
-      <div class="my-auto" id="margin-bottom-logo">
+    <div class="container-fluid d-flex" id="footer-bottom">
+      <div id="footer-bottom-logo">
         <img src="static/img/KK_logo_keskitetty_sf_swe_white.svg" alt="Kansalliskirjasto">
         <span>Palvelun tarjoaa Kansalliskirjasto</span>
       </div>
-      <div class="my-auto ms-auto" id="margin-bottom-link">
+      <div id="footer-bottom-link">
         <a href="#">kansalliskirjasto.fi</a>
         <img src="static/img/arrow-up-right-from-square-solid.svg">
       </div>
