--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -147,7 +147,7 @@
 
   <footer>
     <div class="container" id="footer-main">
-      <div class="row pb-3">
+      <div class="row py-3">
 
         <div class="col-md-3">
           <img src="static/img/finto-ai-logo-vaaka.svg" class="img-fluid" alt="Finto AI">
